added another end point in booking controller